# learn-cuda

./: .gitignore  CMakeLists.txt  Makefile  README.md
foxes-rabbits/: README.md
frequency-counter/: README.md
gabor-filter/: README.md
game-of-life/: .gitignore  Makefile
inverse-matrix/: README.md
mandelbrot/: serial.cpp
pythagorean-triples/: README.md
quantization-color/: README.md
random-number/: README.md
text-tendency/: README.md
