project(learn-cuda)
cmake_minimum_required(VERSION 3.22)

add_subdirectory(game-of-life)
add_subdirectory(inverse-matrix)
add_subdirectory(mandelbrot)
add_subdirectory(foxes-rabbits)
add_subdirectory(gabor-filter)
add_subdirectory(frequency-counter)
add_subdirectory(sort)
add_subdirectory(jpeg)
add_subdirectory(quantization-color)
add_subdirectory(word-2-vec)
add_subdirectory(text-tendency)
add_subdirectory(pythagorean-triples)
add_subdirectory(random-number)